data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_792.wast
;; 3. **Conditional Branches Skipping Loop Reinitialization**:     - **Description**: Use `br_if` within a loop to conditionally skip initializing the loop block by jumping to the end. Verify if reinitialization of the loop execution occurs correctly based on the stack contents.     - **Constraint**: Conditional branching within loop execution.     - **CFG Impact**: Conditional branches should not lead to skipping initialization, but incorrect CFG might cause early exit or incorrect loop re-entry.

(assert_invalid
  (module
    (func (result i32)
      (local i32)
      (i32.const 0)
      (local.set 0)
      (loop (result i32)
        (local.get 0)
        (br_if 1 (i32.eqz))
        (i32.const 42)
        (br 0)
      )
    )
  )
  "type mismatch"
)